--- a/wasm-bs-photo-app-1/wwwroot/index.html
+++ b/wasm-bs-photo-app-1/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <!--   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/app.css" />
